Fixed Image ext and Svg Spacing

--- a/src/app/game/page.module.css
+++ b/src/app/game/page.module.css
@@ -58,8 +58,7 @@
 
 .ANEWDIV .roundinfo svg {
   /* border: solid; */
-  margin-bottom: -100;
-  margin-top: -50;
+  /* border: solid; */
 }
 
 
